--- a/css/base/_reset.scss
+++ b/css/base/_reset.scss
@@ -1,15 +1,55 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-size: 1em;
-    font-family: inherit;
-}
-  
 html {
-    font-size: 62.5%;
+    font-size: 100%;
+    box-sizing: border-box;
+    font-family: sans-serif
 }
 
+/* For myselfe, border-box is easier to style */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+/* Reset margins and paddings on elements */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+p,
+pre,
+blockquote,
+figure,
+hr {
+  margin: 0;
+  padding: 0;
+}
+
+/* Removes discs from lists */
 ol,
 ul {
     list-style: none;
+}
+
+/* Browsers don’t inherit typography for forms and buttons. */
+input,
+textarea,
+select,
+button {
+  color: inherit; 
+  font: inherit; 
+  letter-spacing: inherit; 
+}
+
+/* Different browsers style the borders for forms, elements and buttons differently */
+input,
+textarea,
+button {
+  border: 1px solid gray; 
 }
