--- a/css/style.scss
+++ b/css/style.scss
@@ -1,15 +1,17 @@
-@import 'base/reset';
+@import "base/reset";
 
-@import 'base/typography';
-@import 'abstracts/variables';
+@import "base/typography";
 
-@import 'layout/grid';
-@import 'layout/navigation';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'layout/forms';
+@import "abstracts/variables";
+@import "abstracts/mixins";
 
-@import 'pages/home';
-@import 'pages/contact';
+@import "layout/grid";
+@import "layout/navigation";
+@import "layout/header";
+@import "layout/footer";
+@import "layout/forms";
 
-@import 'components/buttons';
+@import "pages/home";
+@import "pages/contact";
+
+@import "components/buttons";
